--- a/guides/index.html
+++ b/guides/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>/guide/</title><link rel="canonical" href="/guide/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=/guide/" /></head></html>
+<!DOCTYPE html><html><head><title>https://amitkummer.github.io/webpack-mdnb/guide/</title><link rel="canonical" href="https://amitkummer.github.io/webpack-mdnb/guide/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://amitkummer.github.io/webpack-mdnb/guide/" /></head></html>
