deploy: 456bc573d4fcbe122035070b78ffd8c739853474

--- a/demo/404.html
+++ b/demo/404.html
@@ -15,7 +15,7 @@
   <nav class='navbar l-container'>
     <ul class='navbar-navigation'>
       <li class='navbar-navigation-item navbar-navigation-item-active'>
-        <a href=https://amitkummer.github.io/webpack-mdnb/>Home</a>
+        <a href=https://amitkummer.github.io/webpack-mdnb/demo>Home</a>
       </li>
       
     </ul>
@@ -44,10 +44,10 @@
     </div>
 
     <nav class="footer-navigation-links">
-      <a href="https://amitkummer.github.io/webpack-mdnb/" class="footer-navigation-links-item">
+      <a href="https://amitkummer.github.io/webpack-mdnb/demo/" class="footer-navigation-links-item">
         Home
       </a>
-      <a href="https://amitkummer.github.io/webpack-mdnb/" class="footer-navigation-links-item">
+      <a href="https://amitkummer.github.io/webpack-mdnb/demo/" class="footer-navigation-links-item">
         
       </a>
       <div class="footer-navigation-links-item">
