--- a/demo/post-copy/emoji-support/index.html
+++ b/demo/post-copy/emoji-support/index.html
@@ -15,11 +15,11 @@
   <nav class='navbar l-container'>
     <ul class='navbar-navigation'>
       <li class='navbar-navigation-item navbar-navigation-item-active'>
-        <a href=https://amitkummer.github.io/webpack-mdnb/>Home</a>
+        <a href=https://amitkummer.github.io/webpack-mdnb/demo>Home</a>
       </li>
       
         <li class='navbar-navigation-item navbar-navigation-item-active'>
-          <a href="https://amitkummer.github.io/webpack-mdnb/post-copy/">Posts</a>
+          <a href="https://amitkummer.github.io/webpack-mdnb/demo/post-copy/">Posts</a>
         </li>
         <li class='navbar-navigation-item'>
           Emoji Support
@@ -88,10 +88,10 @@ font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,And
     </div>
 
     <nav class="footer-navigation-links">
-      <a href="https://amitkummer.github.io/webpack-mdnb/" class="footer-navigation-links-item">
+      <a href="https://amitkummer.github.io/webpack-mdnb/demo/" class="footer-navigation-links-item">
         Home
       </a>
-      <a href="https://amitkummer.github.io/webpack-mdnb/post-copy/" class="footer-navigation-links-item">
+      <a href="https://amitkummer.github.io/webpack-mdnb/demo/post-copy/" class="footer-navigation-links-item">
         Posts
       </a>
       <div class="footer-navigation-links-item">
