deploy: cb7a6c259378417d63d58a772efc56adc55845af

--- a/demo/post-copy/placeholder-text/index.html
+++ b/demo/post-copy/placeholder-text/index.html
@@ -110,9 +110,13 @@ Propoetides <strong>parte</strong>.</p>
       <a href="https://amitkummer.github.io/webpack-mdnb/demo/post-copy/" class="footer-navigation-links-item">
         Posts
       </a>
-      <div class="footer-navigation-links-item">
-        Github
-      </a>
+      <div>
+        
+        <a href="https://github.com/amitkummer/webpack-mdnb" class="footer-navigation-links-item">
+          Github
+        </a>
+        
+      </div>
     </nav>
   </div>
 </footer>
