--- a/demo/series/themes-guide/index.html
+++ b/demo/series/themes-guide/index.html
@@ -108,9 +108,13 @@
       <a href="https://amitkummer.github.io/webpack-mdnb/demo/series/" class="footer-navigation-links-item">
         Series
       </a>
-      <div class="footer-navigation-links-item">
-        Github
-      </a>
+      <div>
+        
+        <a href="https://github.com/amitkummer/webpack-mdnb" class="footer-navigation-links-item">
+          Github
+        </a>
+        
+      </div>
     </nav>
   </div>
 </footer>
